# STM32G4_CMake_Template

./: .gitignore  CMakeLists.txt  README.md
App/: main.c
CMake/: gcc-arm-none-eabi.cmake
